--- a/kernels/xeon/CMakeLists.txt
+++ b/kernels/xeon/CMakeLists.txt
@@ -57,6 +57,7 @@ SET(EMBREE_LIBRARY_FILES
   ../common/accelset.cpp
   ../common/state.cpp
   ../common/rtcore.cpp
+  ../common/rtcore_bvh_builder.cpp
   ../common/buffer.cpp
   ../common/scene.cpp
   ../common/geometry.cpp
